<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.phoebus</groupId>
  <artifactId>parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>phoebus (parent)</name>

  <properties>
    <maven.repo.local>${project.build.directory}/.m2</maven.repo.local>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <skipITTests>true</skipITTests>
  </properties>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.2</version>
        <configuration>
          <source>1.9</source>
          <target>1.9</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <skipITs>${skipITTests}</skipITs>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <!-- Scene Builder is limited to searching for Controllers only within the same folder, thus forcing us to use src/main/java for fxml files instead 
      of /src/main/resources -->
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <resource>
        <directory>src/main/java</directory>
        <includes>
          <include>**/*.fxml</include>
        </includes>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
      <testResource>
        <directory>src/test/java</directory>
        <includes>
          <include>**/*.fxml</include>
        </includes>
      </testResource>
    </testResources>
  </build>


  <profiles>
    <!-- The it-tests profile when used will run all integration tests, these are junit test classes
    with names ending in "IT" -->
    <profile>
      <id>it-tests</id>
      <properties>
        <skipITTests>false</skipITTests>
      </properties>
    </profile>
    <!-- The ui-tests profile when used will run all user interface tests, these are testfx test 
    where the java file names ending in "UI" -->
    <profile>
      <id>ui-tests</id>
      <properties>
        <skipITTests>false</skipITTests>
      </properties>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <includes>
                <include>**/*UI.java</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <!-- The all-tests profile when used will run all integration and user interface tests -->
    <profile>
      <id>all-tests</id>
      <properties>
        <skipITTests>false</skipITTests>
      </properties>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <includes>
                <include>**/*UI.java</include>
                <include>**/*IT.java</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <!-- The Nexus snapshot repository hosting the latest diirt modules -->
    <repository>
      <id>sonatype-nexus-snapshots</id>
      <name>sonatype-nexus-snapshots</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
  </repositories>

  <modules>
    <module>dependencies</module>
    <module>core</module>
    <module>app</module>
    <module>phoebus-product</module>
    <module>services</module>
  </modules>
</project>
